sync-app (0.5.6-44) unstable; urgency=low

  * Support Manufacturer field in DevInf (currently hardcoded to "Nokia")

 -- Duggirala Karthik <karthik.2.duggirala@nokia.com>  Tue, 21 Sep 2010 09:00:00 +0300

sync-app (0.5.6-43) unstable; urgency=low

  * Fixed handling of SyncML config file

 -- Duggirala Karthik <karthik.2.duggirala@nokia.com>  Mon, 20 Sep 2010 14:30:00 +0300

sync-app (0.5.6-42) unstable; urgency=low

  * OBEX timeout now read from conf file instead of hardcoding

 -- Duggirala Karthik <karthik.2.duggirala@nokia.com>  Wed, 15 Sep 2010 15:00:00 +0300

sync-app (0.5.6-41) unstable; urgency=low

  * Corrected build dependencies.  

 -- Duggirala Karthik <karthik.2.duggirala@nokia.com>  Tue, 14 Sep 2010 11:22:55 +0530

sync-app (0.5.6-40) unstable; urgency=low

  * Fixes: NB#189159  sync-app and sync-app-test depend on libextendedkcal 

 -- Duggirala Karthik <karthik.2.duggirala@nokia.com>  Fri, 10 Sep 2010 16:22:55 +0530

sync-app (0.5.6-39) unstable; urgency=low

  * Fixes: NB#189977 -  Development package sync-app-dev does not contain .pc
    files 

 -- Deepak Kodihalli <deepak.kodihalli@nokia.com>  Mon, 06 Sep 2010 16:22:55 +0530

sync-app (0.5.6-38) unstable; urgency=low

  * Integrated latest buteo-syncml changes
  * Fixes: NB#190215

 -- Duggirala Karthik <karthik.2.duggirala@nokia.com>  Mon, 06 Sep 2010 12:34:51 +0530

sync-app (0.5.6-37) unstable; urgency=low

  * Fixes: NB#174584

 -- Duggirala Karthik <karthik.2.duggirala@nokia.com>  Fri, 03 Sep 2010 12:34:51 +0530

sync-app (0.5.6-36) unstable; urgency=low

  * Fixes: NB#188405 -  Syncing 1000 notes from N95 to device takes ~14mins

 -- Deepak Kodihalli <deepak.kodihalli@nokia.com>  Mon, 30 Aug 2010 12:34:51 +0530

sync-app (0.5.6-35) unstable; urgency=low

  * ItemIdMapper now has mappings in-memory and persists them at the end of
    the sync session.
  * Fixes: NB#186181 -  It took ~25 min to sync 1000 calendar entries to device