@@ -7,5 +7,15 @@ include /usr/share/cdbs/1/class/qmake.mk
 CFLAGS += -Wall -Wextra -Wno-unused-parameter
 CXXFLAGS += -Wall -Wextra -Wno-unused-parameter
 
+# architecture we're building for
+DEB_HOST_ARCH ?= $(shell dpkg-architecture -qDEB_HOST_ARCH)
+
 DEB_DESTDIR := $(CURDIR)/debian/tmp
 DEB_DH_INSTALL_SOURCEDIR := debian/tmp
+
+binary:
+ifeq ($(DEB_HOST_ARCH), arm)
+		aegis-deb-add -control debian/sync-app/DEBIAN/control .. debian/sync-app.aegis=_aegis
+else ifeq ($(DEB_HOST_ARCH), armel)
+		aegis-deb-add -control debian/sync-app/DEBIAN/control .. debian/sync-app.aegis=_aegis
+endif
